--- a/Todo/appsettings.json
+++ b/Todo/appsettings.json
@@ -7,5 +7,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  // This should be override for the different environments
+  "GravatarOptions": {
+    "BaseUrl": "https://api.gravatar.com/v3/"
+  }
 }
